# apache_arrow_with_cpp

./: CMakeLists.txt  README.md  test.cpp
src/: CMakeLists.txt  json_schema.cpp  json_schema.h  schema_json.cpp  schema_json.h
